# solana-sandpit

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  build.rs  run.sh
.github/workflows/: rust.yml
app/: package-lock.json  package.json
app/src/: App.tsx  Solana.tsx
contract/: Cargo.toml  README.md
contract/src/: _lib.txt  lib.rs
program/: Cargo.toml
proto/: solana.proto
src/: mint.rs
src/utils/: encode.rs
