[package]
name = "solana-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.1"
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.38.1", features = ["full"] }
solana-client = "2.0.3"
solana-sdk = "2.0.3"
solana-program = "2.0.3"
crossbeam = "0.8.4"

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "encode"
path = "src/utils/encode.rs"
