[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"] 

[dependencies]
solana-program = "2.0.2"
spl-token = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
borsh = "1.4.0"
thiserror = "1.0"